--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 						<a href="#">КОНТАКТЫ</a>
 						<a href="tel:+78003332233">+7 800 333 22 33</a>
 					</div>
+					<a href="tel:+78003332233" class="tell-mini">+7 800 333 22 33</a>
 				</div>
 				<section class="header-menu-text">
 					<h1>ОРГАНИЗАЦИЯ КОНФЕРЕНЦИЙ</h1>
@@ -296,8 +297,8 @@
 
 			<section class="writeToUs container"><!-- WRITE TO US -->
 				<div class="block-form">
-					<p class="writeToUs-text">НАПИШИТЕ НАМ</p>
-					<p class="writeToUs-text2">Задайте их прямо сейчас! Наш специалист ответит вам в ближайшее время!</p>
+					<p class="writeToUs-text writeToUs-text-mini">НАПИШИТЕ НАМ</p>
+					<p class="writeToUs-text2 writeToUs-text-mini">Задайте их прямо сейчас! Наш специалист ответит вам в ближайшее время!</p>
 					
 					<form action="">
 						<p>Введите имя <br><input class="input" type="text" name="name"></p>
