--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 				<p>
 						©2020. All Rights Reserved. <br> Сайт сделал - Tsukanov Vaycheslav
 				</p>
-				<a href="" target="_blank" title="Cсылка на GitHub">
+				<a href="https://github.com/TsukanovVaycheslav/-Website-organization-of-conferences.git" target="_blank" title="Cсылка на GitHub">
 					<img src="img/GitHub.png" alt="GitHub" width="50px">
 				</a>
 			</div>
