--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 							<p>Наша компания предоставляет 100% гарантию качества</p>
 						</div>
 						<div class="header-form">
-							<form action="">
-								<p>Введите имя <br><input class="input input-back" type="text" name="name"></p>
-								<p>Введите email <br><input class="input input-back" type="email" name="login"></p>
-								<p>Введите телефон <br><input class="input input-back" type="password" name="tell"></p>
+							<form class="form-to-fill-mini" action="">
+								<p>Введите имя <br><input class="input input-back" type="text" name="name" placeholder="Введите имя"></p>
+								<p>Введите email <br><input class="input input-back" type="email" name="login" placeholder="E-mail *@*.*"></p>
+								<p>Введите телефон <br><input class="input input-back" type="password" name="tell" placeholder="Вaш телефон +7 (xxx) xxx-xxxx"></p>
 								<p><input class="entrance-btnw" type="submit" value="Отправить"></p>
 							</form>
 						</div>
@@ -301,9 +301,9 @@
 					<p class="writeToUs-text2 writeToUs-text-mini">Задайте их прямо сейчас! Наш специалист ответит вам в ближайшее время!</p>
 					
 					<form action="">
-						<p>Введите имя <br><input class="input" type="text" name="name"></p>
-						<p>Введите email <br><input class="input" type="email" name="login"></p>
-						<p>Введите телефон <br><input class="input" type="password" name="tell"></p>
+						<p>Введите имя 		<br><input class="input" type="text" name="name"></p>
+						<p>Введите email 	<br><input class="input" type="email" name="login"></p>
+						<p>Введите телефон 	<br><input class="input" type="password" name="tell"></p>
 						<p><input class="entrance-btn" type="submit" value="Отправить"></p>
 					</form>
 				</div>
